MediaRecorder: add mime type to recorded blobs

... which was forgotten.

This CL also extends appropriately the LayoutTest (and does a micro fix).

BUG=615940

Review-Url: https://codereview.chromium.org/2207613003
Cr-Commit-Position: refs/heads/master@{#409397}

Former-commit-id: 3e7d8241bc996051f1617b08656b2687cff0a1a0